# opencl-basics

./: CMakeLists.txt  OpenclProgram.cpp  OpenclProgram.h  main.cpp  matrix_add.cl  matrix_multiply.cl  run.sh
